User can view and add servers
This commit completes the topics covered in "The Basics" unit for the
Udemy course. The concepts implemented include creating components,
basic component configuration with the @Component decorator, data
binding techniques including string interpolation, property binding,
event binding, and two-way binding with the ngModel directive.
Several directives were implemented including ngStyle, ngIf, ngClass,
and ngFor.

The App mounts ServersComponent which renders an input for server name
and a button to create a new server. All current servers are listed and
rendered with a ServerComponent. Each server displays an id and styling
which is dynamically determined by the server's online status.

FormModules is imported by AppComponent.

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,1 +1,6 @@
-<p>Server Component</p>
+<p
+  [ngStyle]="{backgroundColor: color()}"
+  [ngClass]="{online: serverStatus === 'online'}"
+>
+  Server with ID {{ serverId }} is {{ serverStatus }}
+</p>
