--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,9 @@
 
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#">Recipes</a></li>
-        <li><a href="#">Shopping List</a></li>
+        <li><a href="#recipes" (click)='navClick("recipes")'>Recipes</a></li>
+        <li><a href="#shopping-list" (click)='navClick("shopping-list")'>Shopping
+            List</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
