--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,10 +1,14 @@
 <div class="row">
   <div class="col-md-5">
     <app-recipe-list>
-      <app-recipe-list-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-list-item>
+      <app-recipe-list-item *ngFor="let recipe of recipes" [recipe]="recipe"
+        (select)='selectRecipe($event)'></app-recipe-list-item>
     </app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipe-detail>
+    <ng-template #infoText>
+      <p>Please select a recipe!</p>
+    </ng-template>
   </div>
 </div>
