--- a/src/app/shopping-list/edit/edit.component.html
+++ b/src/app/shopping-list/edit/edit.component.html
@@ -4,11 +4,13 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" name="name" id="name" class="form-control">
+          <input type="text" name="name" id="name" class="form-control"
+            #nameInput>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" name="amount" id="amount" class="form-control">
+          <input type="number" name="amount" id="amount" class="form-control"
+            #amountInput>
         </div>
       </div>
 
@@ -16,7 +18,7 @@
         <div class="col-sm-7">
           <div class="btn-group btn-group-justified" role="group" aria-label="edit action">
             <div class="btn-group" role="group">
-              <button class="btn btn-success" type="submit">Add</button>
+              <button class="btn btn-success" type="submit" (click)="addBtnClick()">Add</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-danger" type="button">Delete</button>
