--- a/src/app/recipes/list/list.component.html
+++ b/src/app/recipes/list/list.component.html
@@ -6,6 +6,6 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <ng-content></ng-content>
+    <app-recipe-list-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-list-item>
   </div>
 </div>
