--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,8 +15,8 @@
 
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a routerLink="recipes">Recipes</a></li>
-        <li><a routerLink="shopping-list">Shopping
+        <li routerLinkActive="active"><a routerLink="recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="shopping-list">Shopping
             List</a></li>
       </ul>
 
