--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,9 @@
   <div class="container-fluid">
 
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Book</a>
+      <a style="cursor: pointer" class="navbar-brand" routerLink="/">
+        Recipe Book
+      </a>
 
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
         data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -22,10 +24,12 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" role="button">Manage <span class="caret"></span></a>
+          <a style="cursor: pointer" class="dropdown-toggle" role="button">
+            Manage <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetch Data</a></li>
+            <li><a style="cursor: pointer">Save Data</a></li>
+            <li><a style="cursor: pointer">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
