--- a/src/app/recipes/detail/detail.component.html
+++ b/src/app/recipes/detail/detail.component.html
@@ -18,10 +18,13 @@
         Manage Recipe <span class="caret"></span>
       </button>
       <ul class="dropdown-menu">
-        <li><a href="#" (click)='addIngredientsToShoppingList()'>To Shopping
-            List</a></li>
-        <li><a href="#">Edit Recipe</a></li>
-        <li><a href="#">Delete Recipe</a></li>
+        <li>
+          <a style="cursor: pointer" (click)='addIngredientsToShoppingList()'>
+            To Shopping List
+          </a>
+        </li>
+        <li><a style="cursor: pointer">Edit Recipe</a></li>
+        <li><a style="cursor: pointer">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
