--- a/src/app/recipes/list/list.component.html
+++ b/src/app/recipes/list/list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success">New Recipe</button>
+    <a class="btn btn-success" style="cursor: pointer" routerLink="new">New Recipe</a>
   </div>
 </div>
 <hr>
