Refactor shopping-list-edit component
Use NgForm to handle adding a new ingredient instead of using
ElementRef and click event handler. This will make extending
the features of the shopping-list-edit component easier and
less error prone.

--- a/src/app/shopping-list/edit/edit.component.html
+++ b/src/app/shopping-list/edit/edit.component.html
@@ -1,16 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onAddItem(editForm)" #editForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" name="name" id="name" class="form-control"
-            #nameInput>
+          <input type="text" name="name" id="name" class="form-control" ngModel>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
           <input type="number" name="amount" id="amount" class="form-control"
-            #amountInput>
+            ngModel>
         </div>
       </div>
 
@@ -18,7 +17,7 @@
         <div class="col-sm-7">
           <div class="btn-group btn-group-justified" role="group" aria-label="edit action">
             <div class="btn-group" role="group">
-              <button class="btn btn-success" type="submit" (click)="addBtnClick()">Add</button>
+              <button class="btn btn-success" type="submit">Add</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-danger" type="button">Delete</button>
