--- a/src/app/shopping-list/edit/edit.component.html
+++ b/src/app/shopping-list/edit/edit.component.html
@@ -1,15 +1,16 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onAddItem(editForm)" #editForm="ngForm">
+    <form (ngSubmit)="onSubmit(editForm)" #editForm="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" name="name" id="name" class="form-control" ngModel>
+          <input type="text" name="name" id="name" class="form-control" ngModel
+            required>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
           <input type="number" name="amount" id="amount" class="form-control"
-            ngModel>
+            ngModel required pattern="^[1-9]+[0-9]*$">
         </div>
       </div>
 
@@ -17,13 +18,15 @@
         <div class="col-sm-7">
           <div class="btn-group btn-group-justified" role="group" aria-label="edit action">
             <div class="btn-group" role="group">
-              <button class="btn btn-success" type="submit">Add</button>
+              <button class="btn btn-success" type="submit" [disabled]="!editForm.valid">
+                {{ editMode ? 'Update' : 'Add' }}
+              </button>
             </div>
             <div class="btn-group" role="group">
-              <button class="btn btn-danger" type="button">Delete</button>
+              <button class="btn btn-danger" type="button" (click)="onDelete()">Delete</button>
             </div>
             <div class="btn-group" role="group">
-              <button class="btn btn-primary" type="button">Clear</button>
+              <button class="btn btn-primary" type="button" (click)="resetForm()">Clear</button>
             </div>
           </div>
         </div>
