--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,8 @@
     <app-shopping-list-edit></app-shopping-list-edit>
     <hr>
     <ul class="list-group">
-      <a style="cursor: pointer" class="list-group-item" *ngFor="let ingredient of ingredients">
+      <a style="cursor: pointer" class="list-group-item" *ngFor="let ingredient of ingredients; let i = index"
+        (click)="onEditItem(i)">
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
     </ul>
