--- a/src/app/recipes/edit-recipe/edit-recipe.component.html
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.html
@@ -1,2 +1,85 @@
-<p *ngIf="editMode">editing recipe {{ id }}</p>
-<p *ngIf="!editMode">creating new recipe</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm">
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <div class="btn-toolbar">
+              <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
+              <button type="button" class="btn btn-danger">Cancel</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" class="form-control" formControlName="name">
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imgPath">Image URL</label>
+            <input type="text" name="imgPath" id="imgPath" class="form-control" formControlName="imagePath">
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="" alt="" class="img-responsive">  
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea type="text" name="description" id="description" class="form-control" rows="6" formControlName="description"></textarea>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="row"
+            *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
+            [formGroupName]="i"
+          >
+            <div class="col-xs-8">
+              <div class="form-group">
+                <input type="text" class="form-control" formControlName="name">
+              </div>
+            </div>
+            <div class="col-xs-2">
+              <div class="form-group">
+                <input type="number" class="form-control" formControlName="amount">
+              </div>
+            </div>
+            <div class="col-xs-2">
+              <div class="form-group">
+                <button class="btn btn-danger" aria-label="remove ingredient">
+                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+        </div>
+      </div>
+
+    </form>
+  </div>
+</div>
