--- a/src/app/recipes/edit-recipe/edit-recipe.component.html
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.html
@@ -6,7 +6,7 @@
           <div class="form-group">
             <div class="btn-toolbar">
               <button type="submit" class="btn btn-success" [disabled]="!recipeForm.valid">Save</button>
-              <button type="button" class="btn btn-danger">Cancel</button>
+              <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
             </div>
           </div>
         </div>
