--- a/src/app/recipes/detail/detail.component.html
+++ b/src/app/recipes/detail/detail.component.html
@@ -24,7 +24,7 @@
           </a>
         </li>
         <li><a style="cursor: pointer" routerLink="edit">Edit Recipe</a></li>
-        <li><a style="cursor: pointer">Delete Recipe</a></li>
+        <li><a style="cursor: pointer" (click)="onDelete()">Delete Recipe</a></li>
       </ul>
     </div>
   </div>
