--- a/src/app/recipes/edit-recipe/edit-recipe.component.html
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.html
@@ -73,7 +73,7 @@
             </div>
             <div class="col-xs-2">
               <div class="form-group">
-                <button class="btn btn-danger" aria-label="remove ingredient">
+                <button type="button" class="btn btn-danger" aria-label="remove ingredient" (click)="onRemoveIngredient(i)">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                 </button>
               </div>
