--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,12 +17,13 @@
 
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li routerLinkActive="active"><a routerLink="recipes">Recipes</a></li>
-        <li routerLinkActive="active"><a routerLink="shopping-list">Shopping
+        <li routerLinkActive="active"><a routerLink="/recipes">Recipes</a></li>
+        <li routerLinkActive="active"><a routerLink="/shopping-list">Shopping
             List</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" role="button">
             Manage <span class="caret"></span>
