--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,6 +24,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
+        <li routerLinkActive="active"><a routerLink="/signin">Sign In</a></li>
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" role="button">
             Manage <span class="caret"></span>
