--- a/src/app/recipes/edit-recipe/edit-recipe.component.html
+++ b/src/app/recipes/edit-recipe/edit-recipe.component.html
@@ -16,7 +16,8 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" name="name" id="name" class="form-control" formControlName="name">
+            <input type="text" name="name" id="name" class="form-control"
+              formControlName="name">
           </div>
         </div>
       </div>
@@ -25,24 +26,16 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="imgPath">Image URL</label>
-            <input
-              type="text"
-              name="imgPath"
-              id="imgPath"
-              class="form-control"
-              formControlName="imagePath"
-              #imgUrl>
+            <input type="text" name="imgPath" id="imgPath" class="form-control"
+              formControlName="imagePath" #imgUrl>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12">
-          <img
-            [src]="imgUrl.value"
-            alt="preview of recipe image"
-            style="height: 200px;"
-            class="img-responsive">  
+          <img [src]="imgUrl.value" alt="preview of recipe image" style="height: 200px;"
+            class="img-responsive">
         </div>
       </div>
 
@@ -50,17 +43,16 @@
         <div class="col-xs-12">
           <div class="form-group">
             <label for="description">Description</label>
-            <textarea type="text" name="description" id="description" class="form-control" rows="6" formControlName="description"></textarea>
+            <textarea type="text" name="description" id="description" class="form-control"
+              rows="6" formControlName="description"></textarea>
           </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-xs-12" formArrayName="ingredients">
-          <div class="row"
-            *ngFor="let ingredientCtrl of recipeForm.get('ingredients').controls; let i = index"
-            [formGroupName]="i"
-          >
+          <div class="row" *ngFor="let ingredientCtrl of ingredientControls().controls; let i = index"
+            [formGroupName]="i">
             <div class="col-xs-8">
               <div class="form-group">
                 <input type="text" class="form-control" formControlName="name">
@@ -73,8 +65,9 @@
             </div>
             <div class="col-xs-2">
               <div class="form-group">
-                <button type="button" class="btn btn-danger" aria-label="remove ingredient" (click)="onRemoveIngredient(i)">
-                    <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+                <button type="button" class="btn btn-danger" aria-label="remove ingredient"
+                  (click)="onRemoveIngredient(i)">
+                  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
                 </button>
               </div>
             </div>
@@ -86,7 +79,8 @@
 
       <div class="row">
         <div class="col-xs-12">
-          <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+          <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add
+            Ingredient</button>
         </div>
       </div>
 
