feat: Disable shopping list item delete button
The Delete button in the shopping list item edit form is disabled if
there is no item loaded for editing.

--- a/src/app/shopping-list/edit/edit.component.html
+++ b/src/app/shopping-list/edit/edit.component.html
@@ -23,7 +23,7 @@
               </button>
             </div>
             <div class="btn-group" role="group">
-              <button class="btn btn-danger" type="button" (click)="onDelete()">Delete</button>
+              <button class="btn btn-danger" type="button" (click)="onDelete()" [disabled]="!editMode">Delete</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-primary" type="button" (click)="resetForm()">Clear</button>
