--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -23,11 +23,11 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <ng-template [ngIf]="!authService.isAuthenticated()">
+        <ng-template [ngIf]="!(isAuthenticated | async)">
           <li routerLinkActive="active"><a routerLink="/signup">Register</a></li>
           <li routerLinkActive="active"><a routerLink="/signin">Sign In</a></li>
         </ng-template>
-        <ng-template [ngIf]="authService.isAuthenticated()">
+        <ng-template [ngIf]="isAuthenticated | async">
           <li><a style="cursor:pointer" (click)="onSignout()">Sign Out</a></li>
           <li class="dropdown" appDropdown>
             <a style="cursor: pointer" class="dropdown-toggle" role="button">
