--- a/src/app/recipes/list/list.component.html
+++ b/src/app/recipes/list/list.component.html
@@ -1,11 +1,12 @@
 <div class="row">
   <div class="col-xs-12">
-    <a class="btn btn-success" style="cursor: pointer" routerLink="new">New Recipe</a>
+    <a class="btn btn-success" style="cursor: pointer" routerLink="new">New
+      Recipe</a>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipe-list-item *ngFor="let recipe of recipes" [recipe]="recipe"></app-recipe-list-item>
+    <app-recipe-list-item *ngFor="let recipe of (recipes | async)" [recipe]="recipe"></app-recipe-list-item>
   </div>
 </div>
